add more external perturbation experiments to model 2; plot weight changes in experiments involving inactivation during conditioning

--- a/model1.ipynb
+++ b/model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e58f6d5c",
+   "id": "1b94fde3",
    "metadata": {},
    "source": [
     "# Model 1: LA, BLA, CeA with mixed excitation/inhibition\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9826d2c0",
+   "id": "284ea34e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8b99f97a",
+   "id": "2fd8746b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7d179c53",
+   "id": "95d0667e",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "49e01569",
+   "id": "657ec526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0799d6cb",
+   "id": "f2bdcb26",
    "metadata": {},
    "source": [
     "### Experiment 3: does adding another error population in BLA allow context-based fear, or enhance fear renewal?"
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "49b1559e",
+   "id": "1f97f95d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "aed33a2c",
+   "id": "d44e5a98",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
     "    inputs.US = 1\n",
     "    for p in range(nCond):\n",
     "        sim.run(2)\n",
-    "    print(\"post-conditioning expression\")\n",
+    "    print(\"post-conditioning expression in CTX A\")\n",
     "    inputs.CTX = inputs.CTXs[0]\n",
     "    inputs.US = 0\n",
     "    sim.run(2)\n",
@@ -586,13 +586,13 @@
     "    inputs.US = 0\n",
     "    for p in range(nExt):\n",
     "        sim.run(2)\n",
-    "    print(\"post-extinction expression\")\n",
+    "    print(\"post-extinction expression in CTX B\")\n",
     "    inputs.CTX = inputs.CTXs[1]\n",
     "    inputs.US = 0\n",
     "    sim.run(2)\n",
     "    T_expression_ext_inactive = int((2+2*nCond+2+2*nExt+1)/dt)\n",
     "    T_expression_ext_active = int((2+2*nCond+2+2*nExt+2)/dt)\n",
-    "    print(\"renewal expression\")\n",
+    "    print(\"renewal expression in CTX A\")\n",
     "    inputs.CTX = inputs.CTXs[0]\n",
     "    inputs.US = 0\n",
     "    sim.run(2)\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3bc5955c",
+   "id": "099366ab",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "68dae631",
+   "id": "31077add",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5b15eb36",
+   "id": "d137aa12",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "918b72af",
+   "id": "dcace6dd",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df7557f7",
+   "id": "5548913a",
    "metadata": {},
    "outputs": [],
    "source": []
